# GitArchiver

./: .env  .env.example  Grabber.sh  README.md  api.py  auth_config.json.backup  cleanup_database.py  config.py  dashboard.html  debug_archive.py  enhanced_dashboard.html  enhanced_event_scraper.py  enhanced_scraper.py  gharchive_scraper.py  metrics.py  professional_api.py  requirements.txt  run.sh  setup.sh  setup_old.sh  start.sh  status.sh  test_comprehensive_capture.py  test_db.py  test_run.sh  to-do.md  visualizer.py  web_api.py  wordlist_generator.py
auth/: users.json
core/: auth.py  config.py  database.py
github_scraper_env/: pyvenv.cfg
old2/: ENHANCED_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  ORACLE_CLOUD_SETUP.md  api.py  config.py  data_importer.py  db_manager.py  demo_comprehensive_capture.py  enhanced_dashboard.html  fix_repository_processing.py  improved_scraper.py  rate_limiter.py  system_monitor.py  test_resource_monitoring.py
reports/: system_report_20250724_234333.json  system_report_20250724_234535.json  system_report_20250724_234838.json  system_report_20250724_234939.json  system_report_20250724_235040.json  system_report_20250724_235141.json  system_report_20250724_235511.json  system_report_20250724_235803.json  system_report_20250725_000005.json  system_report_20250725_000207.json  system_report_20250725_000308.json  system_report_20250725_000409.json  system_report_20250725_000510.json  system_report_20250725_000611.json  system_report_20250725_000712.json  system_report_20250725_000813.json  system_report_20250725_001419.json  system_report_20250725_002026.json  system_report_20250725_002127.json  system_report_20250725_002228.json  system_report_20250725_002329.json  system_report_20250725_002430.json  system_report_20250725_002531.json  system_report_20250725_002834.json  system_report_20250725_003440.json  system_report_20250725_003541.json  system_report_20250725_003743.json  system_report_20250725_003945.json  system_report_20250725_004046.json  system_report_20250725_004551.json  system_report_20250725_004753.json  system_report_20250725_004854.json  system_report_20250725_004955.json  system_report_20250725_005056.json  system_report_20250725_005157.json  system_report_20250725_005258.json  system_report_20250725_005359.json  system_report_20250725_005702.json  system_report_20250725_010005.json  (+6216 more)
rust_github_archiver/: .env  Cargo.toml  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  README.md  backup.sh  dashboard.html  docker-compose.yml  generate_report.sh  health_check.sh  init.sql  run.sh  schema.sql  setup.sh
rust_github_archiver/gharchive_data/: setup_new.sh
rust_github_archiver/reports/: system_report_20250803_201651.md
rust_github_archiver/src/: cli.rs  lib.rs  main.rs
rust_github_archiver/src/ai/: mod.rs  triage.rs
rust_github_archiver/src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs  server.rs  state.rs
rust_github_archiver/src/auth/: jwt.rs  middleware.rs  mod.rs  users.rs
rust_github_archiver/src/bigquery/: mod.rs
rust_github_archiver/src/core/: config.rs  database.rs  enhanced_database.rs  mod.rs  resource_monitor.rs
rust_github_archiver/src/github/: dangling_commits.rs  mod.rs
rust_github_archiver/src/gui/: mod.rs  secrets_ninja.rs
rust_github_archiver/src/integration/: mod.rs
rust_github_archiver/src/performance/: mod.rs
rust_github_archiver/src/realtime/: mod.rs
rust_github_archiver/src/scraper/: archive_scraper.rs  downloader.rs  file_processor.rs  main_scraper.rs  mod.rs  state.rs
rust_github_archiver/src/secrets/: mod.rs  scanner.rs  validator.rs
rust_github_archiver/tauri-app/: Cargo.toml  index.html  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json
rust_github_archiver/tauri-app/src/: App.tsx  main.rs  style.css
rust_github_archiver/tauri-app/src/components/: Dashboard.tsx  LavaLampBackground.tsx  PerformanceReport.tsx  SecretScanner.tsx  WebhookConfig.tsx
unused/: test_api.py  (+4 more)
(+7420 files in other folders)
