[package]
name = "github_archiver"
version = "2.0.0"
edition = "2021"
description = "Professional GitHub Archive Scraper in Rust"
authors = ["Your Name <isaiah.fpga@gmail.com>"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client and server
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
axum = { version = "0.7", features = ["ws", "multipart", "query"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# System monitoring
sysinfo = "0.30"
sys-info = "0.9"

# Compression
flate2 = "1.0"

# Additional dependencies for YAML support
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment variables
envy = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
async-trait = "0.1"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Rate limiting
governor = "0.6"

# Regex
regex = "1.10"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# BigQuery client for GH Archive scanning
gcp-bigquery-client = "0.26"
yup-oauth2 = "8.0"

# GitHub API client
octocrab = "0.35"

# Redis caching
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Secret scanning
fancy-regex = "0.13"

# GUI for Secrets Ninja port (temporarily disabled)
# iced = { version = "0.12", features = ["tokio", "canvas", "image", "svg"] }

# AI/LLM integration (temporarily disabled due to version conflicts)
# llm = "0.1"
# hf-hub = "0.3"
# tokenizers = "0.15"
# candle-core = "0.7"
# candle-nn = "0.7"
# candle-transformers = "0.7"

# Performance and parallel processing
rayon = "1.8"
lru = "0.12"
rusqlite = { version = "0.30", features = ["bundled"] }
num_cpus = "1.16"

# PDF generation for reports
printpdf = "0.6"

# CSV handling
csv = "1.3"

# Base64 encoding/decoding
base64 = "0.21"

# Additional crypto
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"

# HTML parsing
scraper = "0.18"
html5ever = "0.26"

# Git operations
git2 = "0.18"

# AWS SDK for secret validation
aws-config = "1.0"
aws-sdk-sts = "1.0"
aws-sdk-s3 = "1.0"

# Webhook server enhancements
actix-web = "4.4"
actix-cors = "0.7"

# Additional security
entropy = "0.4"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
