[package]
name = "github-secret-hunter-tauri"
version = "2.0.0"
description = "Tauri GUI for GitHub Secret Hunter"
authors = ["Isaiah FPGA <isaiah.fpga@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bit-Loop/GitArchiver"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# GitHub Secret Hunter library
github_archiver = { path = "../" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
